[gd_scene load_steps=12 format=3 uid="uid://dhcdbarguf22r"]

[ext_resource type="Script" uid="uid://sybhkasgcjp" path="res://abilities.gd" id="1_6ouwa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ouwa"]
bg_color = Color(0.905882, 0.376471, 0.501961, 0.219608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yohyg"]
bg_color = Color(0.330237, 0.574527, 0.440835, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6ouwa"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57sjf"]
bg_color = Color(0.905882, 0.376471, 0.501961, 0.219608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggd60"]
bg_color = Color(0.329412, 0.576471, 0.439216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sn2kb"]
bg_color = Color(0.905882, 0.376471, 0.501961, 0.219608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o32qe"]
bg_color = Color(0.329412, 0.576471, 0.439216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mx4y5"]
bg_color = Color(0.905882, 0.376471, 0.501961, 0.219608)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1x7y"]
bg_color = Color(0.329412, 0.576471, 0.439216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yohyg"]
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Abilities" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ouwa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 50

[node name="Ability1" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/Ability1"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6ouwa")
theme_override_styles/fill = SubResource("StyleBoxFlat_yohyg")
show_percentage = false

[node name="Label" type="Label" parent="HBoxContainer/Ability1/ProgressBar"]
layout_mode = 2
offset_left = 1.0
offset_top = 23.0
offset_right = 101.0
offset_bottom = 68.0
text = "0.1s"
label_settings = SubResource("LabelSettings_6ouwa")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="HBoxContainer/Ability1"]
one_shot = true

[node name="Ability2" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ProgressBar2" type="ProgressBar" parent="HBoxContainer/Ability2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_57sjf")
theme_override_styles/fill = SubResource("StyleBoxFlat_ggd60")
show_percentage = false

[node name="Label2" type="Label" parent="HBoxContainer/Ability2/ProgressBar2"]
layout_mode = 2
offset_left = 1.0
offset_top = 23.0
offset_right = 101.0
offset_bottom = 68.0
text = "0.1s"
label_settings = SubResource("LabelSettings_6ouwa")
horizontal_alignment = 1

[node name="Timer2" type="Timer" parent="HBoxContainer/Ability2"]
one_shot = true

[node name="Ability3" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ProgressBar3" type="ProgressBar" parent="HBoxContainer/Ability3"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sn2kb")
theme_override_styles/fill = SubResource("StyleBoxFlat_o32qe")
show_percentage = false

[node name="Label3" type="Label" parent="HBoxContainer/Ability3/ProgressBar3"]
layout_mode = 2
offset_left = 1.0
offset_top = 23.0
offset_right = 101.0
offset_bottom = 68.0
text = "0.1s"
label_settings = SubResource("LabelSettings_6ouwa")
horizontal_alignment = 1

[node name="Timer3" type="Timer" parent="HBoxContainer/Ability3"]
one_shot = true

[node name="Ability4" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ProgressBar4" type="ProgressBar" parent="HBoxContainer/Ability4"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mx4y5")
theme_override_styles/fill = SubResource("StyleBoxFlat_o1x7y")
show_percentage = false

[node name="Label4" type="Label" parent="HBoxContainer/Ability4/ProgressBar4"]
layout_mode = 2
offset_left = 1.0
offset_top = 23.0
offset_right = 101.0
offset_bottom = 68.0
text = "0.1s"
label_settings = SubResource("LabelSettings_6ouwa")
horizontal_alignment = 1

[node name="Timer4" type="Timer" parent="HBoxContainer/Ability4"]
one_shot = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 105.0
offset_right = 76.0
offset_bottom = 139.0
text = "Q"
label_settings = SubResource("LabelSettings_yohyg")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 182.0
offset_top = 105.0
offset_right = 222.0
offset_bottom = 139.0
text = "W"
label_settings = SubResource("LabelSettings_yohyg")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 341.0
offset_top = 107.0
offset_right = 381.0
offset_bottom = 141.0
text = "E"
label_settings = SubResource("LabelSettings_yohyg")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 105.0
offset_right = 529.0
offset_bottom = 139.0
text = "R"
label_settings = SubResource("LabelSettings_yohyg")

[connection signal="timeout" from="HBoxContainer/Ability1/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HBoxContainer/Ability2/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="HBoxContainer/Ability3/Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="HBoxContainer/Ability4/Timer4" to="." method="_on_timer_4_timeout"]
